<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.moksh.loginandregister.BhamashahYojana"
    tools:showIn="@layout/activity_bhamashah">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/new_login_gradients2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout_5"
            android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:id="@+id/citizen_registration"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#84FFFF"
                android:text="@string/citizen_registration"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout_6"
            android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:id="@+id/citizen_enrollment"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#84FFFF"
                android:text="@string/citizen_enrollement"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout_7"
            android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:id="@+id/forgot_registration"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#84FFFF"
                android:text="@string/citizen_forgot_registration"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout_8"
            android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:id="@+id/get_citizen_receipt"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#84FFFF"
                android:text="@string/get_citizen_receipt"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout_9"
            android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:id="@+id/citizen_doc_upload"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#84FFFF"
                android:text="@string/citizen_doc_upload"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout_10"
            android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:id="@+id/get_card_status"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#84FFFF"
                android:text="@string/get_card_status"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout_11"
            android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:id="@+id/pdf_enroll"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#84FFFF"
                android:text="@string/pdf_enroll"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />
        </LinearLayout>




    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
